<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/buttontest"
		android:onClick="message"/>

	<TextView
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/title" />

	<TextView
	    android:id="@+id/texti"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/texti" />

	<TextView
	    android:id="@+id/time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/time" />
	
</LinearLayout>
